# Pozify

./: .gitattributes  .gitignore  README.md  app.py  lefthook.yml  packages.txt  pre-requirements.txt  pyproject.toml  requirements.txt
configs/: coach_summary_lora.default.json
demo/: README.md  router_demo_videos.json
docs/: 01-docs-index.md  02-technical-setup.md  10-overview-build-small-hackathon-report.md  11-overview-demo-video-transcript.md  21-router-huggingface-release.md  30-coach-modal-training.md  31-coach-training-report.md  40-data-custom-collection-guide.md  50-codex-development-workflow.md  90-archive-implementation-plan.md  91-archive-coach-analysis-implementation-plan.md  92-archive-coach-model-data-plan.md  99-archive-pozify-project-documentation.md  build-small-hackathon-report.md  coach-analysis-implementation-plan.md  coach-model-data-plan.md  coach-summary-modal-training.md  coach-summary-training-report.md  custom-data-collection-guide.md  demo-video-transcript.md  exercise-router-training-report.md  huggingface-router-model-card.md  huggingface-router-release.md  implementation-plan.md  phase-10-open-source-slm-summary-plan.md  phase-9-summary-verifier-plan.md  pozify-project-documentation.md
scripts/: build_coach_summary_sft_dataset.py  build_exercise_knowledge_base.py  coach_summary_modal.py  exercise_router_modal.py  prepare_public_fitness_chat_data.py  recommend_hf_summary_models.py  train_coach_summary_lora.py  upload_exercise_router_to_hf.py
tests/: test_annotated_renderer.py  test_app_zero_gpu.py  test_coach_summary.py  (+18 more)
web/: app.js  (+4 more)
(+101 files in other folders)
