[project]
name = "pozify"
version = "0.1.0"
description = "Gradio base app for Pozify with mocked pipeline steps and explicit data contracts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.44.0",
    "mediapipe>=0.10.35",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
