[project]
name = "pozify"
version = "0.1.0"
description = "Gradio base app for Pozify with mocked pipeline steps and explicit data contracts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "fastapi>=0.136.3",
    "gradio>=4.44.0",
    "huggingface-hub>=0.24.0",
    "joblib>=1.4.0",
    "mediapipe>=0.10.35",
    "modal>=1.5.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    # HF Spaces installs gradio[mcp,oauth], which requires pydantic<=2.12.5.
    "pydantic>=2.11.10,<=2.12.5",
    "scikit-learn>=1.4.0",
    "spaces>=0.40.0",
    "torch==2.11.0",
    "transformers>=4.51.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]
train = [
    "datasets>=2.20.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
